#20 getCurrentContent